--- a/wp-content/themes/thehandspace/sass/elements/_main.scss
+++ b/wp-content/themes/thehandspace/sass/elements/_main.scss
@@ -91,9 +91,7 @@ article {
             margin-bottom: 4em;
         }
 
-        p {
-            font-size: 12px;
-            line-height: $font__line-height-header;
+        figcaption {
             margin: 0.5em 0 0.5em 0;
         }
     }
